test/src/e2e_vm_tests/test_programs/should_fail/multiple_config_blocks_two_libs/src/lib2.sw
library lib2;

configurable {
    Y: u64 = 55,
}
